RESOLVED FIXED200844
More missing exception checks in string comparison operators.
https://bugs.webkit.org/show_bug.cgi?id=200844
Summary More missing exception checks in string comparison operators.
Mark Lam
Reported 2019-08-16 16:42:55 PDT
Attachments
proposed patch. (6.26 KB, patch)
2019-08-16 16:45 PDT, Mark Lam
saam: review+
Mark Lam
Comment 1 2019-08-16 16:45:48 PDT
Created attachment 376567 [details] proposed patch.
Mark Lam
Comment 2 2019-08-16 16:50:06 PDT
Thanks for the review. Landed in r248802: <http://trac.webkit.org/r248802>.
Note You need to log in before you can comment on or make changes to this bug.