More missing exception checks in string comparison operators. https://bugs.webkit.org/show_bug.cgi?id=200844 <rdar://problem/54378684>

Reviewed by Saam Barati.

JSTests:

* stress/missing-exception-check-in-string-greater-than-compare.js: Added.
* stress/missing-exception-check-in-string-greater-than-or-equal-compare.js: Added.
* stress/missing-exception-check-in-string-less-than-compare.js: Added.
* stress/missing-exception-check-in-string-less-than-or-equal-compare.js: Added.

Source/JavaScriptCore:

* runtime/Operations.h:
(JSC::jsLess):
(JSC::jsLessEq):



Canonical link: https://commits.webkit.org/214576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248802 268f45cc-cd09-0410-ab3c-d52691b4dbfc